[package]
name = "bm"
version = "0.7.0"
authors = ["fezcode <samil.bulbul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
path-absolutize = "3.0.11"
termsize = "0.1.4"
#getopts = "0.2"
